# OpticsBenchmark

./: .gitignore  README.md  STANDARDS.md  TODO.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt
configs/: system.yaml
configs/agents/: bedrock.yaml  claude-3.yaml  gemini.yaml  gpt-4.yaml  groq.yaml  ollama.yaml  template.yaml  together.yaml
configs/tasks/: lens_design.yaml  multi_doc_summary.yaml  paper_retrieval_eval.yaml  paper_review.yaml  research_overview.yaml  system_analysis.yaml  template.yaml
dataset/: README.md
docs/: README.md  contribution.md  theory.md
docs/foundation/: README.md  agent-theory.md  evaluation.md  optical-basics.md
prompts/system/: optical_agent.txt  research_agent.txt
prompts/templates/: lens_design.txt  multi_doc_summary.txt  paper_retrieval.txt  paper_review.txt  research_overview.txt  system_analysis.txt
scripts/: download_data.sh  generate_report.py  run_eval.sh
src/: __init__.py  main.py
src/core/: __init__.py  agent.py  evaluator.py  runner.py
src/environments/: __init__.py  base_env.py  zos_env.py
src/tools/: __init__.py  quick_llm_selector.py
src/utils/: __init__.py  logger.py  parser.py
tests/: __init__.py  conftest.py  test_citation_evaluator.py  test_evaluator_base.py  test_integration.py  test_quick_llm_selector.py  test_report_generator.py  test_result_analyzer.py  test_rouge_scorer.py
website/: index.html
